updated case study

--- a/images.html
+++ b/images.html
@@ -41,6 +41,7 @@
             <img src="images/rfs-user-flows.png">
             <img src="images/rfs/data-mining.png">
             <img src="images/rfs/rfs-site-flow.png">
+            <img src="images/rfs-blue-shoes.png">
 
           </section>
       </main>
