--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/landing.css">
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Rozha+One" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
@@ -62,7 +62,7 @@
                         </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <h2>ReFated Shoes</h2>
+                                <p id="caption">ReFated Shoes</p>
                                 <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
                                   help taking his company to the next level.</p>
                           </div>
@@ -77,7 +77,7 @@
                           </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <h2>COOP</h2>
+                                <p id="caption">COOP</p>
                                 <p>A platform that makes it easy to share, store, and collaborate
                                    needed help rebranding for a new audience.</p>
                           </div>
