updated for mobile

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
               </ul>
           </nav>
           <section class="intro">
-              <div id="container">
+              <div id="more-container">
                   <h1>/gyl.bɑ.hɑɾ/</h1>
                   <p>
-                  <h1>or you can call me G for short; Rose for translation</h1>
+                  <h2 style="width:80%;">or you can call me G for short; Rose for translation</h2>
               </div>
           </section>
       </header>
@@ -47,12 +47,12 @@
 
           <section class="about">
                 <div class="intro-me">
-                    <div id="only-width">
+                    <div id="container">
                         <img src="images/me.png">
                         <h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.
-                        <p>I love being challenged and working on puzzles.</h2>
+                        <p>I love solving puzzles and challenges.</h2>
                         <p>
-                        <h4>summary</h4>
+                        <h4>Summary</h4>
                         <p>I'm a UX designer with expertise in business development and strategy.
                           Sector-agnostic, my main role is to help manage and guide you to reach
                           your goal, whether it's a website, a project, or a product. I've worked in
@@ -75,7 +75,7 @@
                 </div>
                 <div class="magic">
                     <div id="only-width">
-                      <h3>my design origin story</h3>
+                      <h3>Origin Story</h3>
                       <h2 style="padding-top:2rem;">“OW!”</h2>
                       <p>It happened, again. My husband just walked his toe <i class="fas fa-shoe-prints" style="color: #87EED5;"></i> right into the bookshelf. Clumsiness aside,
                         we all should be able to freely walk our living rooms, regardless of size, sans fear of pain.
