--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
               </nav>
               <section class="hero">
                   <div id="container">
-                      <h1>Hi, I’m Gulbahar,</h1>
-                      <h1>freelancing ux designer in Milan;</h1>
+                      <h1><i>Hi,</i> I’m Gulbahar,</h1>
+                      <h1>freelance ux designer in Milan;</h1>
                       <h1>made in NYC.</h1>
                       <div class="buttons">
                             <a data scroll href="#projects"><button>view select projects</button></a>
-                            <a href="about.html"><button style="margin-top:.5rem;">how to pronounce my name</button></a>
+                            <a href="about.html"><button style="margin-top:.5rem;">proper pronunciation</button></a>
                       </div>
                   </div>
               </section>
