--- a/rfs.html
+++ b/rfs.html
@@ -147,9 +147,9 @@
                           <h4>Finding a replacement word</h4>
                           <p>We tested a replacement for refurbished and wanted to know what it was
                             about the word the threw people off. We got <span id="bold">133
-                              responses</span> and learned that:</p>
+                              responses</span> and found our new word:</p>
                           <p id="spacing-fix">
-                          <h3 style="text-align:center;">"Hand-painted" works</h3>
+                          <h3 style="text-align:center;">"Hand-painted"</h3>
                           <p id="spacing-fix">
                           <p>54.3% of surveyors might buy “hand-painted” shoes,
                             while 25.4% definitely would buy them.</p3>
@@ -408,7 +408,7 @@
                       </div>
                       <div class="clearfix"></div>
                   </div>
-                  <div class="part" style="width: 80%;margin:0 auto;">
+                  <div class="part" id="width">
                       <div class="style-guide" id="shadow">
                           <h3>Style guide</h3>
                           <div class="first">
@@ -458,10 +458,9 @@
               <div class="part" id="container">
                   <h2>Prototype</h2>
                   <p></p>
-                  <video width="640" height="336" controls>
-                      <source src="videos/rfs-video.mp4" type="video/mp4">
-                      Your browser does not support the video tag.
-                  </video>
+                  <iframe width="560" height="315"
+                  src="https://www.youtube.com/embed/YCQ3W7ZWShA" frameborder="0"
+                  allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
               <div class="part">
                   <div class="user-feedback">
@@ -510,7 +509,7 @@
                           </div>
                           <div class="clearfix"></div>
                           <p><h4 id="spacing-fix">Photos</h4>
-                          <p>We had to upgrade the quality of photos we had.
+                          <p>We had to upgrade our quality of photos.
                           <h4>Background section</h4>
                           <p>We had to include a section that described the process. The before and after shoes, that were mentioned during the lo- and hi-fi tests, would be a great solution for the next round of shoes.
                           <h4>Shopping cart</h4>
@@ -525,7 +524,7 @@
               </div>
               <div class="part">
                   <h2>Launch</h2>
-                  <ul class="launch">
+                  <ul class="launch" id="width">
                       <li><img src="images/homepage.png" class="third"></li>
                       <li><img src="images/about-refated.png" class="third"></li>
                       <li><img src="images/rfs-detail.png" class="third"></li>
@@ -540,7 +539,7 @@
                   </ul>
               </div>
               <div class="part" id="container">
-                  <h2>what i learned</h2>
+                  <h2>Takeaways</h2>
                   <p>In retail, photography is just as important as the site design.
                     To dispel concerns of condition and quality, the users requested
                     more photos of the finished product as well as the painting process.
@@ -558,7 +557,7 @@
                   <div class="clearfix"></div>
               </div>
 
-              <div class="case-studies">
+              <div class="case-studies" id="no-mobile">
                   <a href="rfs.html"><img src="images/rfs-laptop.png" class="first"></a>
                   <a href="coop.html"><img src="images/coop-laptop.png" class="second"></a>
               </div>
@@ -568,7 +567,7 @@
           <section id="contact">
               <div id="container">
                   <div class="contact-text">
-                      <h2>&darr; let's chat &darr;</h2>
+                      <h2>let's chat &darr;</h2>
                   </div>
               </div>
           </section>
