updated case study

--- a/rfs.html
+++ b/rfs.html
@@ -184,12 +184,12 @@
                               <li>Design aesthetic: craftsmanship, old school feel</li>
                               <li>How they market: mainly social media</li>
                           </ul>
-                          <ul class="inspo" id="spacing-fix" style="margin-bottom:0;">
-                              <div class="first">
+                          <ul class="inspo" id="no-mobile" style="margin-bottom:0;">
+                              <div class="first" style="width:50%;">
                                   <li><img src="images/inspo1.png" class="first" id="shadow"></li>
                                   <li><img src="images/inspo2.png" class="second" id="shadow"></li>
                               </div>
-                              <div class="second">
+                              <div class="second" style="width:50%;">
                                   <li><img src="images/comp3.png" class="first" id="shadow"></li>
                                   <li><img src="images/inspo3.png" class="second" id="shadow"></li>
                               </div>
@@ -254,7 +254,7 @@
               <div class="sketching">
                   <div class="part" id="container">
                       <h2>Sketching</h2>
-                      <p>Turning a site map into a website</p>
+                      <p>Turning a site map into a website.</p>
                       <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
                         <button>lo-fi prototype</button></a>
                   </div>
@@ -266,7 +266,7 @@
                             chose which parts we liked best and created the lo-fi versions.
                             We went with version 2 of the lo-fi sketches.</p>
                         </div>
-                        <div class="home">
+                        <div class="home" id="width">
                             <div class="first">
                                 <h4 style="text-align:center;">Sketches</h4>
                                 <div class="first">
@@ -310,27 +310,27 @@
                               flow starting from the pencil sketch. It shows the almost
                               final iteration from each drawing.</p>
                         </div>
-                        <div class="faq" id="shadow">
+                        <div class="faq" id="shadow" id="width">
                             <div class="third">
-                                <h4 style="text-align:center;">version 1</h4>
+                                <p id="caption" style="text-align:center;">version 1</p>
                                 <img src="images/rfs/rfs-sketch-faq.png" class="full">
-                                <p id="caption">Here you'll see the navigation to the left, with
+                                <p>Here you'll see the navigation to the left, with
                                   drop-down menus. We decided to place the navigation at
                                   top for consistency and to leave the FAQ content open
                                   so it was easily searchable.</p>
                             </div>
                             <div class="third">
-                                <h4 style="text-align:center;">version 2</h4>
+                                <p id="caption" style="text-align:center;">version 2</p>
                                 <img src="images/rfs/rfs-lofi-faq.png" class="full">
-                                <p id="caption">This was taken into the next version. Surveyors
+                                <p>This was taken into the next version. Surveyors
                                   had asked that the FAQ section include the actual questions
                                   people may ask, rather than just the information, as it
                                   is presented here.</p>
                             </div>
                             <div class="third">
-                                <h4 style="text-align:center;">version 3</h4>
+                                <p id="caption" style="text-align:center;">version 3</p>
                                 <img src="images/rfs/rfs-faq.png" class="full">
-                                <p id="caption">Here is the most final iteration. We made sure that
+                                <p>Here is the most final iteration. We made sure that
                                   the top navigation was similar to the main navigation
                                   for consistency. And made sure to include the questions.</p>
                                 <div class="clearfix"></div>
@@ -381,13 +381,12 @@
                       <h4>However, the logos that fit the brand the best were:</h4>
                       <div class="part"style="width:68%; margin:auto;">
                           <div class="first">
-                              <p id="caption" style="text-align:center;">the artisinal one
-                              show craftsmanship</p>
-                              <img src="images/rfs/stamp-logo.png" class="full">
+                              <p id="caption" style="text-align:center;">craftsmanship</p>
+                              <img src="images/rfs/stamp-logo.png" class="full" style="width: 85%;">
                           </div>
                           <div class="second">
-                              <p id="caption" style="text-align:center;">or the classic,
-                              modern take</p>
+                              <p id="caption" style="text-align:center;">or classic and
+                              modern</p>
                               <img src="images/rfs/rfs-logo.png" class="full">
                           </div>
                           <div class="clearfix"></div>
@@ -398,7 +397,7 @@
                             And we decided on the classic one.
                           <div class="first">
                               <p id="caption" style="text-align:center;">main logo</p>
-                              <img src="images/logo-details.png">
+                              <img src="images/logo-details.png" style="width: 80%;">
                           </div>
                           <div class="second">
                               <p id="caption" style="text-align:center;">all variations</p>
@@ -440,7 +439,7 @@
                               <p>
                               <div class="images">
                                   <img src="images/rfs/button-save.png" class="first">
-                                  <img src="images/rfs/button-remove.png" class="second">
+                                  <img src="images/rfs/button-remove.png" class="second" style="width: 36%;float: left;">
                                   <div class="clearfix"></div>
                               </div>
                           </div>
@@ -458,56 +457,35 @@
               <div class="part" id="container">
                   <h2>Prototype</h2>
                   <p></p>
-                  <iframe width="560" height="315"
-                  src="https://www.youtube.com/embed/YCQ3W7ZWShA" frameborder="0"
-                  allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  <div id="video">
+                      <iframe width="560" height="315"
+                      src="https://www.youtube.com/embed/YCQ3W7ZWShA" frameborder="0"
+                      allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  </div>
               </div>
               <div class="part">
                   <div class="user-feedback">
                       <div id="container">
                           <h3>Feedback</h3>
-                          <h4>Condensed and edited transcript of a tester that had the same
-                            comments as most testers:</h4>
+                          <h4>Condensed and edited transcript of the average tester:</h4>
                           <p>
-                          <div class="transcript">
-                              <p id="transcript">Look around and talk about what you
-                                think this is about. What can you do here, what's it for,
-                                what strikes you about it? Does the company background give
-                                you enough trust to buy a product from them? Why or why not?
-                              <br>
-                              <br>[Looking at logo]
-                              <br>ReFated shoes. Assuming it’s a shoe company.
-                                  Recycled shoes? Refated makes it seem consignment or recycled.
-                                  Redesigned shoes rather than recycled.
-                                  I see the shopping cart icon. It is selling shoes.
+                          <div class="transcript" id="no-mobile">
+                              <p id="transcript">For something so unique, the process should be highlighted a little bit better. Only the name alerted me that it was something else. And the pictures made it seem like it was worn.
+                                  We need to know upfront that something special is happening here.
                                   <br>
-                              <br>Trust. I don’t see anything that wouldn’t make me want to buy the product.
-                              <br>
-                                  <br>[Looking at about section]
-                                  <br>I feel like i’m not understanding the refated shoes. What does wearable art mean? I just don’t really understand what the company is about
-                                  <br>
-                                  <br>[Looking at FAQ] purchased and handpainted, oh
-                                  <br>For something so unique, the process should be highlighted a little bit better. Only the name alerted me that it was something else. And the pictures made it seem like it was worn.
-                                  We need to know upfront that something special is happening here
-                                  I would purchase if it were in my price range.
-                                  <br>It’s unique and interesting, done by an artist and I appreciate that
-                                  Would love to see some before and after pictures. What does the paint job look like? There isn’t that much about that.
+                                  <br>Would love to see some before and after pictures. What does the paint job look like? There isn’t that much about that.
                                   It just looks like a retail site, which is fine if that’s all that you want to be. It’s such a unique process and product, so you should play that up.
                                   <br>
                                   <br>Nice layout, clean crisp lines, like the color scheme. Deep plum, not a color you see often, unique design.
                                   <br>
-                                  <br>Go through the purchasing process: review an item in detail, add to your cart and purchase. Since this is not a finished product, you will NOT be asked to fill in your credit card information. What do you think of the pages and checkout process?
-                                  <br>Process looks same as any other process.
-                                  Functionality works well.
-                                  All the stuff you expect to see.
-                                  Strange that there’s no sizing in the cart.
-                                  There isn’t a way to take something out of the cart.
+                                  <br>Process looks same as any other process. There isn’t a way to take something out of the cart.
                                   Why is there a quantity button if it’s unique?
                                   <br>
-                                  <br>What, if anything, do you like or dislike? Since this isn’t a finished design, what would you like to see in the final version?
                                   <br>Highlight unique process of shoes. Show that it’s not your average everyday retail site.</p>
                           </div>
                           <div class="clearfix"></div>
+                          <br>
+                          <button>see full transcript</button>
                           <p><h4 id="spacing-fix">Photos</h4>
                           <p>We had to upgrade our quality of photos.
                           <h4>Background section</h4>
@@ -565,10 +543,11 @@
           </section>
 
           <section id="contact">
-              <div id="container">
+              <div>
                   <div class="contact-text">
                       <h2>let's chat &darr;</h2>
                   </div>
+                  <div class="clearfix"></div>
               </div>
           </section>
       </main>
